--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # History files
 .Rhistory
 .Rapp.history
-
 # Session Data files
 .RData
 # Example code in package build process
@@ -24,3 +23,5 @@ vignettes/*.pdf
 *.utf8.md
 *.knit.md
 packrat/lib*/
+.Rproj.user
+storm_data.csv.bz2
