--- a/packrat/lib/x86_64-apple-darwin15.6.0/3.4.1/knitr/DESCRIPTION
+++ b/packrat/lib/x86_64-apple-darwin15.6.0/3.4.1/knitr/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: knitr
 Type: Package
 Title: A General-Purpose Package for Dynamic Report Generation in R
-Version: 1.16
-Date: 2017-05-17
+Version: 1.17
+Date: 2017-08-09
 Authors@R: c( person("Yihui", "Xie", email = "xie@yihui.name", role =
     c("aut", "cre")), person("Adam", "Vogt", role = "ctb"),
     person("Alastair", "Andrew", role = "ctb"), person("Alex",
@@ -20,9 +20,10 @@ Authors@R: c( person("Yihui", "Xie", email = "xie@yihui.name", role =
     "Hirschmann", role = "ctb"), person("Fitch", "Simeon", role =
     "ctb"), person("Forest", "Fang", role = "ctb"), person(c("Frank",
     "E", "Harrell", "Jr"), role = "ctb", comment = "the Sweavel package
-    at inst/misc/Sweavel.sty"), person("Gregoire", "Detrez", role =
-    "ctb"), person("Hadley", "Wickham", role = "ctb"), person("Heewon",
-    "Jeon", role = "ctb"), person("Henrik", "Bengtsson", role = "ctb"),
+    at inst/misc/Sweavel.sty"), person("Garrick", "Aden-Buie", role =
+    "ctb"), person("Gregoire", "Detrez", role = "ctb"),
+    person("Hadley", "Wickham", role = "ctb"), person("Heewon", "Jeon",
+    role = "ctb"), person("Henrik", "Bengtsson", role = "ctb"),
     person("Hiroaki", "Yutani", role = "ctb"), person("Ian", "Lyttle",
     role = "ctb"), person("Hodges", "Daniel", role = "ctb"),
     person("Jake", "Burkhead", role = "ctb"), person("James", "Manton",
@@ -71,7 +72,7 @@ Suggests: formatR, testit, rgl (>= 0.95.1201), codetools, rmarkdown,
     htmlwidgets (>= 0.7), webshot, tikzDevice (>= 0.10), png, jpeg,
     XML, RCurl, DBI (>= 0.4-1), tibble
 License: GPL
-URL: http://yihui.name/knitr/
+URL: https://yihui.name/knitr/
 BugReports: https://github.com/yihui/knitr/issues
 VignetteBuilder: knitr
 SystemRequirements: Package vignettes based on R Markdown v2 or
@@ -88,7 +89,7 @@ Collate: 'block.R' 'cache.R' 'utils.R' 'citation.R' 'hooks-html.R'
     'utils-vignettes.R' 'zzz.R'
 RoxygenNote: 6.0.1
 NeedsCompilation: no
-Packaged: 2017-05-17 05:29:52 UTC; yihui
+Packaged: 2017-08-09 06:32:13 UTC; yihui
 Author: Yihui Xie [aut, cre], Adam Vogt [ctb], Alastair Andrew [ctb],
     Alex Zvoleff [ctb], Andre Simon [ctb] (the CSS files under
     inst/themes/ were derived from the Highlight package
@@ -98,29 +99,30 @@ Author: Yihui Xie [aut, cre], Adam Vogt [ctb], Alastair Andrew [ctb],
     (the framed package at inst/misc/framed.sty), Doug Hemken [ctb],
     Duncan Murdoch [ctb], Fabian Hirschmann [ctb], Fitch Simeon [ctb],
     Forest Fang [ctb], Frank E Harrell Jr [ctb] (the Sweavel package at
-    inst/misc/Sweavel.sty), Gregoire Detrez [ctb], Hadley Wickham
-    [ctb], Heewon Jeon [ctb], Henrik Bengtsson [ctb], Hiroaki Yutani
-    [ctb], Ian Lyttle [ctb], Hodges Daniel [ctb], Jake Burkhead [ctb],
-    James Manton [ctb], Jared Lander [ctb], Jason Punyon [ctb], Javier
-    Luraschi [ctb], Jeff Arnold [ctb], Jeremy Ashkenas [ctb, cph] (the
-    CSS file at inst/misc/docco-classic.css), Jeremy Stephens [ctb],
-    Jim Hester [ctb], Joe Cheng [ctb], Johannes Ranke [ctb], John
-    Honaker [ctb], John Muschelli [ctb], Jonathan Keane [ctb], JJ
-    Allaire [ctb], Johan Toloe [ctb], Joseph Larmarange [ctb], Julien
-    Barnier [ctb], Kaiyin Zhong [ctb], Kamil Slowikowski [ctb], Karl
-    Forner [ctb], Kevin K. Smith [ctb], Kirill Mueller [ctb], Kohske
-    Takahashi [ctb], Michael Friendly [ctb], Michal Bojanowski [ctb],
-    Michel Kuhlmann [ctb], Nacho Caballero [ctb], Nick Salkowski [ctb],
-    Noam Ross [ctb], Qiang Li [ctb], Ramnath Vaidyanathan [ctb],
-    Richard Cotton [ctb], Robert Krzyzanowski [ctb], Romain Francois
-    [ctb], Scott Kostyshak [ctb], Sebastian Meyer [ctb], Sietse Brouwer
-    [ctb], Simon de Bernard [ctb], Sylvain Rousseau [ctb], Taiyun Wei
-    [ctb], Thibaut Assus [ctb], Thibaut Lamadon [ctb], Thomas Leeper
-    [ctb], Tom Torsney-Weir [ctb], Trevor Davis [ctb], Viktoras Veitas
-    [ctb], Weicheng Zhu [ctb], Wush Wu [ctb], Zachary Foster [ctb]
+    inst/misc/Sweavel.sty), Garrick Aden-Buie [ctb], Gregoire Detrez
+    [ctb], Hadley Wickham [ctb], Heewon Jeon [ctb], Henrik Bengtsson
+    [ctb], Hiroaki Yutani [ctb], Ian Lyttle [ctb], Hodges Daniel [ctb],
+    Jake Burkhead [ctb], James Manton [ctb], Jared Lander [ctb], Jason
+    Punyon [ctb], Javier Luraschi [ctb], Jeff Arnold [ctb], Jeremy
+    Ashkenas [ctb, cph] (the CSS file at inst/misc/docco-classic.css),
+    Jeremy Stephens [ctb], Jim Hester [ctb], Joe Cheng [ctb], Johannes
+    Ranke [ctb], John Honaker [ctb], John Muschelli [ctb], Jonathan
+    Keane [ctb], JJ Allaire [ctb], Johan Toloe [ctb], Joseph Larmarange
+    [ctb], Julien Barnier [ctb], Kaiyin Zhong [ctb], Kamil Slowikowski
+    [ctb], Karl Forner [ctb], Kevin K. Smith [ctb], Kirill Mueller
+    [ctb], Kohske Takahashi [ctb], Michael Friendly [ctb], Michal
+    Bojanowski [ctb], Michel Kuhlmann [ctb], Nacho Caballero [ctb],
+    Nick Salkowski [ctb], Noam Ross [ctb], Qiang Li [ctb], Ramnath
+    Vaidyanathan [ctb], Richard Cotton [ctb], Robert Krzyzanowski
+    [ctb], Romain Francois [ctb], Scott Kostyshak [ctb], Sebastian
+    Meyer [ctb], Sietse Brouwer [ctb], Simon de Bernard [ctb], Sylvain
+    Rousseau [ctb], Taiyun Wei [ctb], Thibaut Assus [ctb], Thibaut
+    Lamadon [ctb], Thomas Leeper [ctb], Tom Torsney-Weir [ctb], Trevor
+    Davis [ctb], Viktoras Veitas [ctb], Weicheng Zhu [ctb], Wush Wu
+    [ctb], Zachary Foster [ctb]
 Repository: CRAN
-Date/Publication: 2017-05-18 09:05:55 UTC
-Built: R 3.4.1; ; 2017-10-14 14:49:14 UTC; unix
+Date/Publication: 2017-08-10 04:27:37 UTC
+Built: R 3.4.1; ; 2017-08-11 04:44:23 UTC; unix
 InstallAgent: packrat 0.4.8.1
 InstallSource: CRAN
-Hash: 3b8dc00d51027c6d041d56bc92136452
+Hash: f6b2bf543ee3e25f5b92bb46f9958c5f
